--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="sobre" class="section sobre-capa">
         <div class="container sobre-texto">
             <h2>Sobre Mim</h2>
-            <p>Olá! Sou um viajante apaixonada, desejo explorar o mundo e compartilhar minhas aventuras com vocês.</p>
+            <p>Olá! Sou Eduardo Wesley, um jovem de 20 anos movido pela curiosidade e pela vontade de explorar o mundo – tanto o digital quanto o real. Enquanto mergulho em tecnologia, também adoro viajar e descobrir novos lugares, culturas e histórias. Acredito que cada viagem é uma oportunidade de aprendizado, uma chance de sair da zona de conforto e ampliar horizontes. Assim como na tecnologia, encaro cada destino como um desafio e uma aventura, sempre aberto a novas experiências. Aqui, compartilho um pouco da minha jornada – entre códigos, paisagens e momentos inesquecíveis. 🚀✈️</p>
         </div>
     </section>
     
@@ -67,7 +67,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 - ExploraViagem. Todos os direitos reservados.</p>
+            <p>&copy; 2024 - Eduardo Wesley. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
